# nativeTestApp

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/miodragmilosevic/nativetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: GrayScaleFilter.cpp  GrayScaleFilter.h  ImageFilter.h  NegativeFilter.cpp  NegativeFilter.h  NoiseFilter.cpp  NoiseFilter.h  OneColorFilter.cpp  OneColorFilter.h  PixelateFilter.cpp  PixelateFilter.h  SnowFilter.cpp  SnowFilter.h  TvFilter.cpp  TvFilter.h  color.cpp  color.h  nativefacade.cpp
app/src/main/java/com/example/miodragmilosevic/nativetest/: ExampleApplication.java  LocaleHelper.java  MashData.java  NativeHelper.java
app/src/main/java/com/example/miodragmilosevic/nativetest/base/: BasePresenter.java  RxBasePresenter.java
app/src/main/java/com/example/miodragmilosevic/nativetest/filterimage/: FilterAdapter.java  FilterItem.java
app/src/main/java/com/example/miodragmilosevic/nativetest/filterimage/mvp/: Contract.java  FilterImageActivity.java  FilterImagePresenter.java  FilterImageRepository.java
app/src/main/java/com/example/miodragmilosevic/nativetest/filters/: ImageFilter.java  ImageProcessor.java  JavaImageProcessor.java  NativeImageProcessor.java
app/src/main/java/com/example/miodragmilosevic/nativetest/filters/javaFilters/: GrayScaleFilter.java  JavaFilterFactory.java  NegativeFilter.java  NoiseFilter.java  (+5 more)
app/src/main/java/com/example/miodragmilosevic/nativetest/histogram/: HistogramActivity.java
app/src/main/java/com/example/miodragmilosevic/nativetest/imagedownloader/: DownloadManagerImageDownloader.java  ImageDownloader.java
app/src/main/java/com/example/miodragmilosevic/nativetest/imagegallery/: ImageGridAdapter.java  ImageModel.java
app/src/main/java/com/example/miodragmilosevic/nativetest/mainscreen/: MainActivity.java
app/src/main/java/com/example/miodragmilosevic/nativetest/opencv/: OpenCvActivity.java
app/src/main/java/com/example/miodragmilosevic/nativetest/scan/: CustomScannerActivity.java  SmallCaptureActivity.java  ToolbarCaptureActivity.java
app/src/main/java/com/example/miodragmilosevic/nativetest/util/: ImageLoader.java  PermissionHelper.java
app/src/main/res/layout/: activity_custom_scanner.xml  activity_filter_image.xml  activity_histogram.xml  activity_image_galery.xml  activity_main.xml  activity_open_cv.xml  capture_appcompat.xml  capture_custom.xml  capture_small.xml  custom_barcode_scanner.xml  item_filter.xml  item_grid.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/com/example/miodragmilosevic/nativetest/: ExampleUnitTest.java
(+19 files in other folders)
